--- a/src/app/_shared/modal/edit-lookup-entry/edit-lookup-entry.component.html
+++ b/src/app/_shared/modal/edit-lookup-entry/edit-lookup-entry.component.html
@@ -153,7 +153,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="dismiss()()">Close</button>
+      <button type="button" class="btn btn-round" (click)="dismiss()()">Close</button>
       <button type="button" class="btn btn-round btn-primary" [disabled]="editLookupEntryForm.invalid"
         (click)="done(_lookupEntry)">
         <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
