--- a/src/app/admin/admin-config/admin-config.component.html
+++ b/src/app/admin/admin-config/admin-config.component.html
@@ -261,7 +261,7 @@
             </div>
         </div>
         <div class="modal-footer justify-content-between">
-            <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+            <button type="button" class="btn btn-round" (click)="d()">Close</button>
             <button type="button" class="btn btn-round btn-primary" [disabled]="editPropsForm.invalid"
                 (click)="c(editPropsData)">
                 <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
@@ -325,7 +325,7 @@
             </div>
         </div>
         <div class="modal-footer justify-content-between">
-            <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+            <button type="button" class="btn btn-round" (click)="d()">Close</button>
             <button type="button" class="btn btn-round btn-primary" [disabled]="editAppGroupForm.invalid"
                 (click)="c(editAppGroupData)">
                 <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
