--- a/src/app/design/editor/bucket-manager/bucket-manager.component.html
+++ b/src/app/design/editor/bucket-manager/bucket-manager.component.html
@@ -338,7 +338,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(removeBucketData)">
         <i class="icon-minus-sign-alt"></i> Remove Bucket
       </button>
@@ -502,7 +502,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
 
 
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
     <button type="button" class="btn btn-round btn-primary" [disabled]="bucketEditForm.invalid"
       (click)="c(editBucketData)">
       <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
@@ -537,7 +537,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(removeBucketFileData)">
         <i class="icon-minus-sign-alt"></i> Remove File
       </button>
@@ -582,7 +582,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
       }
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
     </div>
   </div>
 </ng-template>
@@ -616,7 +616,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <!-- <button type="button" class="btn btn-round btn-primary" (click)="c(removeBucketFileData)">
       <i class="icon-minus-sign-alt"></i> Remove File
     </button> -->
@@ -750,7 +750,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
     </div>
   </div>
 </ng-template>
