--- a/src/app/design/editor/cogna-editor/cogna-editor.component.html
+++ b/src/app/design/editor/cogna-editor/cogna-editor.component.html
@@ -1014,7 +1014,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(removeCognaData)">
         <i class="icon-minus-sign-alt"></i> Remove Cogna
       </button>
@@ -1876,7 +1876,7 @@
   </div>
   
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
     <button type="button" class="btn btn-round btn-primary" [disabled]="cognaEditForm.invalid"
       (click)="c(editCognaData)">
       <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
@@ -2150,7 +2150,7 @@
     }
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
     <button type="button" class="btn btn-round btn-primary" [disabled]="cognaSrcEditForm.invalid"
       (click)="c(editSrcData)">
       <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
@@ -2301,7 +2301,7 @@
       </div>
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
     <button type="button" class="btn btn-round btn-primary" [disabled]="cognaToolEditForm.invalid"
       (click)="c(editToolData)">
       <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
@@ -2351,7 +2351,7 @@
       
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
     <button type="button" class="btn btn-round btn-primary" [disabled]="cognaMcpEditForm.invalid"
       (click)="c(editMcpData)">
       <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
@@ -2410,7 +2410,7 @@
     </div>        
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
     <button type="button" class="btn btn-round btn-primary" [disabled]="cognaSubEditForm.invalid"
       (click)="c(editSubData)">
       <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
@@ -2500,7 +2500,7 @@
     </div>
   }
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
   </div>
 </ng-template>
 
@@ -2580,6 +2580,6 @@
     <!-- </div> -->
   <!-- </div> -->
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
   </div>
 </ng-template>
