--- a/src/app/design/editor/endpoint-editor/endpoint-editor.component.html
+++ b/src/app/design/editor/endpoint-editor/endpoint-editor.component.html
@@ -265,7 +265,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(removeEndpointData)">
         <i class="icon-minus-sign-alt"></i> Remove Endpoint
       </button>
@@ -464,7 +464,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" [disabled]="endpointEditForm.invalid"
         (click)="c(editEndpointData)">
       <!-- <i class="fa fa-plus"></i>  -->
@@ -491,7 +491,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(request)">
         <i class="icon-minus-sign-alt"></i> Execute Request
       </button>
