--- a/src/app/design/editor/group-editor/group-editor.component.html
+++ b/src/app/design/editor/group-editor/group-editor.component.html
@@ -394,7 +394,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(removeGroupData)">
         <i class="icon-minus-sign-alt"></i> Remove Group
       </button>
@@ -602,7 +602,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary"
         [disabled]="editAppUserForm.invalid || !(editAppUserData.group?.length>0)" (click)="c(editAppUserData)">
         <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
@@ -686,7 +686,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(approveAppUserData)">
         <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
         Save User
@@ -721,7 +721,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(removeAppUserData)">
         <i class="icon-minus-sign-alt"></i> Remove User
       </button>
@@ -763,7 +763,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(editUserData)">
         Save User
       </button>
@@ -809,7 +809,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(changeProviderData)">
         Change Provider
       </button>
@@ -875,7 +875,7 @@
     </div>
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
     <button type="button" class="btn btn-round btn-primary" [disabled]="mailerEditForm.invalid"
       (click)="c(blastData)">
       <fa-icon [icon]="['far','envelope']" [fixedWidth]="true"></fa-icon>
