--- a/src/app/design/editor/krypta-editor/krypta-editor.component.html
+++ b/src/app/design/editor/krypta-editor/krypta-editor.component.html
@@ -402,7 +402,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(removeWalletData)">
         <i class="icon-minus-sign-alt"></i> Remove Wallet
       </button>
@@ -461,7 +461,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" [disabled]="kryptaEditForm.invalid"
         (click)="c(editWalletData)">
       <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
@@ -489,7 +489,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(removeContractData)">
         <i class="icon-minus-sign-alt"></i> Remove Contract
       </button>
@@ -558,7 +558,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
 
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" [disabled]="contractEditForm.invalid"
         (click)="c(editContractData)">
       <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
@@ -588,7 +588,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(request)">
         <i class="icon-minus-sign-alt"></i> Add Data
       </button>
@@ -623,7 +623,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(request)">
         <i class="icon-minus-sign-alt"></i> Add Data
       </button>
@@ -651,7 +651,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(request[kryptaId])">
         <i class="icon-minus-sign-alt"></i> Run {{rcfData.name}}
       </button>
