--- a/src/app/design/editor/lookup-editor/lookup-editor.component.html
+++ b/src/app/design/editor/lookup-editor/lookup-editor.component.html
@@ -391,7 +391,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(removeLookupEntryData)">
         <i class="icon-minus-sign-alt"></i> Remove Lookup
       </button>
@@ -416,7 +416,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(removeLookupData)">
         <i class="icon-minus-sign-alt"></i> Remove Lookup
       </button>
@@ -494,7 +494,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       @if (importExcelData?.success) {
         <button type="button" class="btn btn-round btn-success" (click)="c()">
           <fa-icon [icon]="['fas','check']" [fixedWidth]="true"></fa-icon>
@@ -542,7 +542,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-success" (click)="c()">
         <fa-icon [icon]="['fas','sync']" [fixedWidth]="true"></fa-icon>
         Resync Lookup
