--- a/src/app/design/editor/mailer-editor/mailer-editor.component.html
+++ b/src/app/design/editor/mailer-editor/mailer-editor.component.html
@@ -271,7 +271,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(removeMailerData)">
         <i class="icon-minus-sign-alt"></i> Remove Mailer
       </button>
@@ -292,7 +292,7 @@
     </div>
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
     <button type="button" class="btn btn-round btn-primary" (click)="c(removeSchedData)">
       <i class="icon-minus-sign-alt"></i> Remove Schedule
     </button>
@@ -494,7 +494,7 @@
     </div>
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
     <button type="button" class="btn btn-round btn-primary" [disabled]="schedEditForm.invalid"
       (click)="c(editSchedData)">
       <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
@@ -514,7 +514,7 @@
     </div>
   }
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
   </div>
 </ng-template>
 
