--- a/src/app/design/editor/ui-editor/key-manager/key-manager.component.html
+++ b/src/app/design/editor/ui-editor/key-manager/key-manager.component.html
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-danger" [disabled]="removeApiKeyForm.invalid"
         (click)="c(removeApiKeyData)">
         <fa-icon [icon]="['fas','exclamation-triangle']" [fixedWidth]="true"></fa-icon>
