--- a/src/app/design/editor/ui-editor/screen-editor/screen-editor.component.html
+++ b/src/app/design/editor/ui-editor/screen-editor/screen-editor.component.html
@@ -1300,7 +1300,7 @@
         } -->
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" [disabled]="editActionForm.invalid"
         (click)="c(editActionData)">
         <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
@@ -1342,7 +1342,7 @@
     </div>
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
     <button type="button" class="btn btn-round btn-primary" (click)="c(removeScreenData)">
       Remove Screen
     </button>
@@ -1367,7 +1367,7 @@
     </div>
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
     <button type="button" class="btn btn-round btn-primary" (click)="c(removeActionData)">
       Remove Action
     </button>
@@ -1392,7 +1392,7 @@
     </div>
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
     <button type="button" class="btn btn-round btn-primary" (click)="c(chatSuggestData)">
       Add Suggestion
     </button>
@@ -1596,7 +1596,7 @@
     <div [ngbNavOutlet]="nav"></div>
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round" (click)="d()">Close</button>
     <button type="button" class="btn btn-round btn-primary" [disabled]="addCombineCompForm.invalid" (click)="c(addCombineCompData)">
       Save Component
     </button>
