--- a/src/app/design/editor/ui-editor/ui-editor.component.html
+++ b/src/app/design/editor/ui-editor/ui-editor.component.html
@@ -351,7 +351,7 @@
             </div>
         </div>
         <div class="modal-footer justify-content-between">
-            <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+            <button type="button" class="btn btn-round" (click)="d()">Close</button>
             @if (importExcelData?.success) {
             <button type="button" class="btn btn-round btn-success" (click)="c()">
                 <fa-icon [icon]="['fas','check']" [fixedWidth]="true"></fa-icon>
@@ -458,7 +458,7 @@
             </div>
         </div>
         <div class="modal-footer justify-content-between">
-            <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+            <button type="button" class="btn btn-round" (click)="d()">Close</button>
             @if (importMetadataData?.success) {
             <button type="button" class="btn btn-round btn-success" (click)="c()">
                 <fa-icon [icon]="['fas','check']" [fixedWidth]="true"></fa-icon>
