--- a/src/app/devprofile/devprofile.component.html
+++ b/src/app/devprofile/devprofile.component.html
@@ -186,7 +186,7 @@
           </div>
         </div>
         <div class="modal-footer justify-content-between">
-          <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+          <button type="button" class="btn btn-round" (click)="d()">Close</button>
           <button type="button" class="btn btn-round btn-primary" [disabled]="changePwdForm.invalid"
             (click)="c(changePwdData)">
           <!-- <fa-icon [icon]="['far','envelope']" [fixedWidth]="true"></fa-icon> -->
