--- a/src/app/_shared/modal/app-edit/app-edit.component.html
+++ b/src/app/_shared/modal/app-edit/app-edit.component.html
@@ -440,7 +440,7 @@
     </div>
   </div>
   <div class="modal-footer border-0 justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="dismiss()()">Close</button>
+    <button type="button" class="btn btn-round" (click)="dismiss()()">Close</button>
     <button type="button" class="btn btn-round btn-primary" [class.disabled]="offline()" [disabled]="editItemForm.invalid"
       (click)="done(_data)">
       <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
