--- a/src/app/_shared/modal/clone-dashboard/clone-dashboard.component.html
+++ b/src/app/_shared/modal/clone-dashboard/clone-dashboard.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="dismiss()()">Close</button>
+    <button type="button" class="btn btn-round" (click)="dismiss()()">Close</button>
     <button type="button" class="btn btn-round btn-primary" (click)="done(_cloneDashboardData)"
       [disabled]="cloneDashboardForm.invalid">
       Start Duplicate Dashboard
