--- a/src/app/_shared/modal/clone-form/clone-form.component.html
+++ b/src/app/_shared/modal/clone-form/clone-form.component.html
@@ -36,7 +36,7 @@
     </div>
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="dismiss()()">Close</button>
+    <button type="button" class="btn btn-round" (click)="dismiss()()">Close</button>
     <button type="button" class="btn btn-round btn-primary" (click)="done(_cloneFormData)"
       [disabled]="cloneFormForm.invalid">
       Start Duplicate Form
