--- a/src/app/_shared/modal/edit-dataset/edit-dataset.component.html
+++ b/src/app/_shared/modal/edit-dataset/edit-dataset.component.html
@@ -397,6 +397,10 @@
                     }
                   </select>
                 </div>
+                <div class="form-group mt-3 mb-3">
+                  <label class="form-label">Default pagination size</label>
+                  <input class="form-control" type="number" placeholder="default: 25" [(ngModel)]="_editDatasetData.x.defPageSize" name="defPageSize">
+                </div>
               </div>
               <div class="form-group mb-3">
                 <label class="form-label">Access available for</label>
@@ -603,7 +607,7 @@
     <div [ngbNavOutlet]="nav"></div>
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="dismiss()()">Close</button>
+    <button type="button" class="btn btn-round" (click)="dismiss()()">Close</button>
     <button type="button" class="btn btn-round btn-primary" [disabled]="editDatasetForm.invalid"
       (click)="done(_editDatasetData)">
       <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
