--- a/src/app/_shared/modal/edit-role/edit-role.component.html
+++ b/src/app/_shared/modal/edit-role/edit-role.component.html
@@ -82,7 +82,7 @@
 
 </div>
 <div class="modal-footer justify-content-between">
-  <button type="button" class="btn btn-round btn-secondary" (click)="dismiss()()">Close</button>
+  <button type="button" class="btn btn-round" (click)="dismiss()()">Close</button>
   <button type="button" class="btn btn-round btn-primary" [disabled]="groupEditForm.invalid"
     (click)="done(_editGroupData)">
     <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
