--- a/src/app/_shared/modal/edit-screen/edit-screen.component.html
+++ b/src/app/_shared/modal/edit-screen/edit-screen.component.html
@@ -158,7 +158,7 @@
     <!-- END NEW EASY ACCESS CONTROL -->
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="dismiss()()">Close</button>
+    <button type="button" class="btn btn-round" (click)="dismiss()()">Close</button>
     <button type="button" class="btn btn-round btn-primary" [disabled]="editScreenForm.invalid"
       (click)="done(_editScreenData)">
       <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
