--- a/src/app/admin/app-list/app-list.component.html
+++ b/src/app/admin/app-list/app-list.component.html
@@ -253,7 +253,7 @@
       </div>
     </div>
     <div class="modal-footer border-0 justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(removeItemData)">
         <i class="icon-minus-sign-alt"></i> Remove App
       </button>
