--- a/src/app/design/editor/lambda-editor/lambda-editor.component.html
+++ b/src/app/design/editor/lambda-editor/lambda-editor.component.html
@@ -350,7 +350,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(removeLambdaData)">
         <i class="icon-minus-sign-alt"></i> Remove Lambda
       </button>
@@ -588,7 +588,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" [disabled]="lambdaEditForm.invalid"
         (click)="c(editLambdaData)">
       <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
@@ -614,7 +614,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(lambdaPromptsData)">
         <i class="icon-minus-sign-alt"></i> Execute Lambda
       </button>
