--- a/src/app/repo/repo-home/repo-home.component.html
+++ b/src/app/repo/repo-home/repo-home.component.html
@@ -206,7 +206,7 @@
       }
     </div>
     <div class="modal-footer border-0 justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       @if (!activationStatus[buyItemData.id]) {
         <button type="button" class="btn btn-round btn-primary" (click)="requestCopy()">
           Request Copy
