--- a/src/app/run/lookup/lookup.component.html
+++ b/src/app/run/lookup/lookup.component.html
@@ -273,7 +273,7 @@
       </div>
     </div>
     <div class="modal-footer justify-content-between">
-      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round" (click)="d()">Close</button>
       <button type="button" class="btn btn-round btn-primary" (click)="c(removeLookupEntryData)">
         <i class="icon-minus-sign-alt"></i> {{lang()=='ms'?'Padam Lookup':'Remove Lookup'}}
       </button>
